--- a/pythonProject1/railway.yml
+++ b/pythonProject1/railway.yml
@@ -1,7 +1,8 @@
 version: '1.0'
 services:
   app:
-    runCommand: 'gunicorn app:app -b 0.0.0.0:$PORT'
+    startCommand: 
+      command: 'gunicorn app:app -b 0.0.0.0:$PORT'
     env:
       - PORT=3000
     plugins:
