--- a/pythonProject1/Dockerfile
+++ b/pythonProject1/Dockerfile
@@ -8,6 +8,10 @@ WORKDIR /app
 COPY . /app
 COPY requirements.txt .
 
+RUN python -m venv /opt/venv && \
+    . /opt/venv/bin/activate && \
+    pip install --no-cache-dir -r requirements.txt
+
 # Install any needed dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
