--- a/pythonProject1/dockerfile
+++ b/pythonProject1/dockerfile
@@ -1,1 +1,22 @@
+# Use the official Python image as a base image
+FROM python:3.9-slim
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Install any needed dependencies specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Expose the port that the app runs on
+EXPOSE 5000
+
+# Define environment variables
+ENV FLASK_APP=app.py
+ENV FLASK_RUN_HOST=0.0.0.0
+
+# Run the Flask application
+CMD ["flask", "run"]
 
