--- a/pythonProject1/dockerfile
+++ b/pythonProject1/dockerfile
@@ -8,7 +8,10 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed dependencies specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN ls -l /opt/venv && \
+    python -m venv --copies /opt/venv && \
+    . /opt/venv/bin/activate && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Expose the port that the app runs on
 EXPOSE 5000
@@ -19,4 +22,3 @@ ENV FLASK_RUN_HOST=0.0.0.0
 
 # Run the Flask application
 CMD ["flask", "run"]
-
