--- a/pythonProject1/requirements.txt
+++ b/pythonProject1/requirements.txt
@@ -1,72 +1,51 @@
-absl-py==2.1.0
-altair==5.3.0
+absl-py==0.15.0
+altair==4.1.0
 astunparse==1.6.3
-attrs==23.2.0
-blinker==1.8.1
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-cmake==3.29.2
-colorama==0.4.6
-dlib @ file:///C:/Users/moham/Downloads/dlib-19.22.99-cp310-cp310-win_amd64.whl#sha256=f2181b6724669fb0147c9ebc326d72b94de41bced1812eff5df4b133b5d0b575
+attrs==21.4.0
+blinker==1.4
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.11
+click==8.0.3
+cmake==3.21.4
+colorama==0.4.4
+dlib==19.22.99
 face-recognition==1.3.0
 face_recognition_models==0.3.0
-ffpyplayer==4.5.1
-Flask==3.0.3
-flatbuffers==24.3.25
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
+ffpyplayer==4.3.2
+Flask==2.1.1
+flatbuffers==2.0
+gast==0.4.0
+gitdb==4.0.7
+GitPython==3.1.24
 google-pasta==0.2.0
-grpcio==1.63.0
-h5py==3.11.0
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.3
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-keras==3.3.3
-libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-ml-dtypes==0.3.2
-namex==0.0.8
-numpy==1.26.4
-opencv-python==4.9.0.80
+grpcio==1.40.0
+h5py==3.1.0
+idna==3.3
+itsdangerous==2.1.0
+Jinja2==3.0.3
+jsonschema==4.2.0
+jsonschema-specifications==0.2.1
+keras==2.6.0
+libclang==11.1.0
+Markdown==3.3.4
+markdown-it-py==1.0.0
+MarkupSafe==2.0.1
+mdurl==1.0.1
+ml-dtypes==0.3.1
+numpy==1.21.3
+opencv-python==4.5.3.56
 opt-einsum==3.3.0
 optree==0.11.0
-packaging==24.0
-pandas==2.2.2
-pillow==10.3.0
-protobuf==4.25.3
-pyarrow==16.0.0
-pydeck==0.9.0
-Pygments==2.17.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-referencing==0.35.1
-requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.0
-six==1.16.0
-smmap==5.0.1
-streamlit==1.34.0
-tenacity==8.2.3
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-intel==2.16.1
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
-watchdog==4.0.0
-Werkzeug==3.0.2
-wrapt==1.16.0
+packaging==21.3
+pandas==1.3.4
+Pillow==8.4.0
+protobuf==3.18.1
+pyarrow==5.0.0
+pydeck==0.7.0
+Pygments==2.11.2
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+rich==12.11.0
+rpds-py==
