--- a/pythonProject1/dockerfile
+++ b/pythonProject1/dockerfile
@@ -8,9 +8,8 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install any needed dependencies specified in requirements.txt
-RUN python -m venv venv && \
-    . venv/bin/activate && \
-    pip install --no-cache-dir -r requirements.txt
+RUN python -m venv /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt
+
 
 # Copy the Flask application code to the container
 COPY . .
